<resources>
    <string name="app_name">Movie Store</string>
    <string name="main_button_1_text">Register Movie</string>
    <string name="main_button_2_text">Display Movies</string>
    <string name="main_button_3_text">Favourites</string>
    <string name="main_button_4_text">Edit Movies</string>
    <string name="main_button_5_text">Search</string>
    <string name="main_button_6_text">Ratings</string>
    <string name="search_title_result">Title result : </string>
    <string name="no_title_search_result">No matching results in movie title</string>
    <string name="search_director_result">Director result : </string>
    <string name="no_director_search_result">No matching results in movie director names</string>
    <string name="search_actor_result">Actor / Actress result : </string>
    <string name="no_actor_search_result">No matching results in movie Actor names</string>
    <string name="display_movies_button_text">Add to Favourites</string>
    <string name="activity_favourite_button_text">Save</string>
    <string name="edit_activity_title">Title of the movie</string>
    <string name="edit_activity_year">Year</string>
    <string name="edit_activity_director">The Director</string>
    <string name="edit_activity_actor">List of Actors / Actresses</string>
    <string name="edit_activity_rating">Rating</string>
    <string name="movie_rating">Movie rating</string>
    <string name="edit_activity_review">Review</string>
    <string name="edit_activity_favourite">Favourite</string>
    <string name="favourite_button_text">Favourite</string>
    <string name="not_favourite_button_text">Not Favourite</string>
    <string name="edit_activity_update_button">Update</string>
    <string name="rating_request_data_button">Request data</string>
    <string name="rating_activity_view_resut_button">VIEW RESULT</string>
    <string name="rating_activity_view_image_activity">VIEW IMAGE</string>
    <string name="movie_image_description">Movie image</string>
    <string name="find_imdb_rating_button_text">Find movie in IMDB</string>
    <string name="register_title">Title of the movie</string>
    <string name="register_year">Year</string>
    <string name="register_director">The Director</string>
    <string name="register_actor">List of Actors / Actresses</string>
    <string name="register_rating">Rating</string>
    <string name="register_review">Review</string>
    <string name="register_activity_button_text">Save</string>
    <string name="search_text_field_hint">Enter any text</string>
    <string name="look_up_button_text">LOOK UP</string>
</resources>