<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/background_image">

    <Button
        android:id="@+id/main_button_1"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/main_button_1_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#0A8CAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_2"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_button_2_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#089DC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_1" />

    <Button
        android:id="@+id/main_button_3"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_button_3_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#1CA1C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_2" />

    <Button
        android:id="@+id/main_button_4"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_button_4_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#0FABD1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_3" />

    <Button
        android:id="@+id/main_button_5"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_button_5_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#07B8E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_4" />

    <Button
        android:id="@+id/main_button_6"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_button_6_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#0ACCFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_5" />
</androidx.constraintlayout.widget.ConstraintLayout>