<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingResultActivity">

    <Button
        android:id="@+id/getData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_request_data_button"
        android:onClick="requestData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_activity_view_resut_button"
        android:onClick="viewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getData" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="367dp"
        android:layout_height="341dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewResult">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/find_list_view"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:choiceMode="singleChoice"
                android:divider="#3C0505"
                android:dividerHeight="2dp"
                android:listSelector="#B3F8EE" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="379dp"
        android:layout_height="188dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <Button
            android:id="@+id/viewMovieImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_activity_view_image_activity"
            android:onClick="viewMovieImage"/>

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="300dp"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/movie_image_description"
            android:padding="20dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>